--- a/imgui.ini
+++ b/imgui.ini
@@ -14,12 +14,17 @@ Size=345,180
 Collapsed=0
 
 [Window][Camera info]
-Pos=60,60
-Size=359,105
+Pos=134,542
+Size=355,111
 Collapsed=0
 
 [Window][Hello window]
-Pos=26,338
+Pos=51,72
 Size=418,228
+Collapsed=0
+
+[Window][Chinchou!]
+Pos=493,547
+Size=344,116
 Collapsed=0
 
